reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__epistemics__projection.rs_line_1086_col_5_002.log

*** crates/tracewake-core/src/epistemics/projection.rs:1086:5: replace actor_known_projection_policy_kinds -> BTreeMap<&'static str, ActorKnownProjectionKindPolicy> with BTreeMap::from_iter([("xyzzy", Default::default())])

*** mutation diff:
--- crates/tracewake-core/src/epistemics/projection.rs
+++ replace actor_known_projection_policy_kinds -> BTreeMap<&'static str, ActorKnownProjectionKindPolicy> with BTreeMap::from_iter([("xyzzy", Default::default())])
@@ -1078,98 +1078,17 @@
                 source_tick.value()
             ),
         }
     }
 }
 
 pub fn actor_known_projection_policy_kinds(
 ) -> BTreeMap<&'static str, ActorKnownProjectionKindPolicy> {
-    BTreeMap::from([
-        (
-            "current_place",
-            ActorKnownProjectionKindPolicy {
-                classification: ActorKnownProjectionPolicy::ReclassifyWhenStale,
-                embodied_scope: ActorKnownProjectionEmbodiedScope::LatestCurrentPlaceOnly,
-                accessibility_scope: ActorKnownProjectionAccessibilityScope::None,
-            },
-        ),
-        (
-            "carried_item",
-            ActorKnownProjectionKindPolicy {
-                classification: ActorKnownProjectionPolicy::ReclassifyWhenStale,
-                embodied_scope: ActorKnownProjectionEmbodiedScope::LatestCurrentPlaceOnly,
-                accessibility_scope: ActorKnownProjectionAccessibilityScope::None,
-            },
-        ),
-        (
-            "route",
-            ActorKnownProjectionKindPolicy {
-                classification: ActorKnownProjectionPolicy::ReclassifyWhenStale,
-                embodied_scope: ActorKnownProjectionEmbodiedScope::LatestCurrentPlaceOnly,
-                accessibility_scope: ActorKnownProjectionAccessibilityScope::None,
-            },
-        ),
-        (
-            "food_source",
-            ActorKnownProjectionKindPolicy {
-                classification: ActorKnownProjectionPolicy::ReclassifyWhenStale,
-                embodied_scope: ActorKnownProjectionEmbodiedScope::LatestCurrentPlaceOnly,
-                accessibility_scope: ActorKnownProjectionAccessibilityScope::FromAnyPlace,
-            },
-        ),
-        (
-            "local_actor",
-            ActorKnownProjectionKindPolicy {
-                classification: ActorKnownProjectionPolicy::ReclassifyWhenStale,
-                embodied_scope: ActorKnownProjectionEmbodiedScope::LatestCurrentPlaceOnly,
-                accessibility_scope: ActorKnownProjectionAccessibilityScope::None,
-            },
-        ),
-        (
-            "local_container",
-            ActorKnownProjectionKindPolicy {
-                classification: ActorKnownProjectionPolicy::ReclassifyWhenStale,
-                embodied_scope: ActorKnownProjectionEmbodiedScope::LatestCurrentPlaceOnly,
-                accessibility_scope: ActorKnownProjectionAccessibilityScope::None,
-            },
-        ),
-        (
-            "local_door",
-            ActorKnownProjectionKindPolicy {
-                classification: ActorKnownProjectionPolicy::ReclassifyWhenStale,
-                embodied_scope: ActorKnownProjectionEmbodiedScope::LatestCurrentPlaceOnly,
-                accessibility_scope: ActorKnownProjectionAccessibilityScope::None,
-            },
-        ),
-        (
-            "local_item",
-            ActorKnownProjectionKindPolicy {
-                classification: ActorKnownProjectionPolicy::ReclassifyWhenStale,
-                embodied_scope: ActorKnownProjectionEmbodiedScope::LatestCurrentPlaceOnly,
-                accessibility_scope: ActorKnownProjectionAccessibilityScope::None,
-            },
-        ),
-        (
-            "sleep_place",
-            ActorKnownProjectionKindPolicy {
-                classification: ActorKnownProjectionPolicy::ReclassifyWhenStale,
-                embodied_scope: ActorKnownProjectionEmbodiedScope::LatestCurrentPlaceOnly,
-                accessibility_scope: ActorKnownProjectionAccessibilityScope::FromAnyPlace,
-            },
-        ),
-        (
-            "workplace",
-            ActorKnownProjectionKindPolicy {
-                classification: ActorKnownProjectionPolicy::SupersedeNewestBySubject,
-                embodied_scope: ActorKnownProjectionEmbodiedScope::CurrentPlaceOnly,
-                accessibility_scope: ActorKnownProjectionAccessibilityScope::FromAnyPlace,
-            },
-        ),
-    ])
+    BTreeMap::from_iter([("xyzzy", Default::default())]) /* ~ changed by cargo-mutants ~ */
 }
 
 pub fn actor_known_projection_kind_policy(kind: &str) -> ActorKnownProjectionKindPolicy {
     let mut policies = actor_known_projection_policy_kinds();
     policies
         .remove(kind)
         .unwrap_or_else(|| panic!("unknown actor-known projection kind: {kind}"))
 }


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `ActorKnownProjectionKindPolicy: Default` is not satisfied
    --> crates/tracewake-core/src/epistemics/projection.rs:1086:36
     |
1086 |     BTreeMap::from_iter([("xyzzy", Default::default())]) /* ~ changed by cargo-mutants ~ */
     |                                    ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `ActorKnownProjectionKindPolicy`
    --> crates/tracewake-core/src/epistemics/projection.rs:171:1
     |
 171 | pub struct ActorKnownProjectionKindPolicy {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `projection::ActorKnownProjectionKindPolicy: Default` is not satisfied
    --> crates/tracewake-core/src/epistemics/projection.rs:1086:36
     |
1086 |     BTreeMap::from_iter([("xyzzy", Default::default())]) /* ~ changed by cargo-mutants ~ */
     |                                    ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `projection::ActorKnownProjectionKindPolicy`
    --> crates/tracewake-core/src/epistemics/projection.rs:171:1
     |
 171 | pub struct ActorKnownProjectionKindPolicy {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
